# METIS_cmake

./: CMakeLists.txt
include/: metis.h
programs/: CMakeLists.txt  metisbin.h
tests/: mtest.c
